add score for target

--- a/test model files/test-LexRank.ipynb
+++ b/test model files/test-LexRank.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,12 +18,13 @@
     "from sumy.utils import get_stop_words\n",
     "\n",
     "import os\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,31 +35,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_path_txt = '../SCOTU_data_txt_save/text'\n",
-    "test_path_sum = '../SCOTU_data_txt_save/summary'"
+    "test_path_txt = '../SCOTUS_data/text'\n",
+    "test_path_sum = '../SCOTUS_data/summary'\n",
+    "target_path_csv = '../SCOTUS_data/paragraph_target_df.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/100 [00:00<?, ?it/s]"
+      "100%|██████████| 100/100 [08:11<00:00,  4.91s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                   facts_of_the_case  \\\n",
+      "0  William Packer was convicted in a California s...   \n",
+      "1  In 1984 Dow Chemical Co. negotiated a settleme...   \n",
+      "2  In 1995, the U.S. Supreme Court, in Adarand Co...   \n",
+      "3  After stopping him for speeding, an Iowa polic...   \n",
+      "4  To prevent \"local media monopolies,\" Section 5...   \n",
+      "\n",
+      "                                            question  \\\n",
+      "0  Was a state court’s determination that encoura...   \n",
+      "1  Does the 1984 Agent Orange settlement preclude...   \n",
+      "2  Did the Court of Appeals misapply the strict s...   \n",
+      "3  Can a search of a stopped vehicle that occurs ...   \n",
+      "4  Does 47 U.S.C. 533(b), which bars local teleph...   \n",
+      "\n",
+      "                                          conclusion  \n",
+      "0  Encouraging the jury to continue deliberations...  \n",
+      "1  An equally divided Court affirmed in part and ...  \n",
+      "2  In a per curiam opinion, the Court dismissed t...  \n",
+      "3  No. In a unanimous opinion, the Court held tha...  \n",
+      "4  Unanswered. After the Court heard oral argumen...  \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [05:49<00:00,  3.50s/it]\n"
+      "\n"
      ]
     }
    ],
@@ -78,19 +106,28 @@
     "\n",
     "    for sentence in summarizer(parser.document, SENTENCES_COUNT):\n",
     "        sentence_txt = sentence_txt + str(sentence) + \"\\n\"\n",
-    "    summary_gen.append(sentence_txt)\n"
+    "    summary_gen.append(sentence_txt)\n",
+    "\n",
+    "df_target = pd.read_csv(target_path_csv)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 1942.88it/s]\n"
+      "  0%|          | 0/100 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:00<00:00, 5393.70it/s]\n"
      ]
     }
    ],
@@ -105,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -124,14 +161,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-large and are newly initialized: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
+      "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-large and are newly initialized: ['roberta.pooler.dense.weight', 'roberta.pooler.dense.bias']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     },
@@ -170,15 +207,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Scores moyens pour facts_of_the_case :\n",
+      "{'rouge1': 0.21444836455050267, 'rouge2': 0.028111137244745295, 'rougeL': 0.12013335297395639, 'bert_score': 0.7932844638824463}\n",
+      "\n",
+      "Scores moyens pour question :\n",
+      "{'rouge1': 0.07259777337038266, 'rouge2': 0.007529909716499205, 'rougeL': 0.05349701536978904, 'bert_score': 0.7901528000831604}\n",
+      "\n",
+      "Scores moyens pour conclusion :\n",
+      "{'rouge1': 0.18009157868819536, 'rouge2': 0.02828797872297114, 'rougeL': 0.10679586301441497, 'bert_score': 0.7971158695220947}\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores = {\n",
+    "    'facts_of_the_case': {'rouge1': [], 'rouge2': [], 'rougeL': [], 'bert_score': []},\n",
+    "    'question': {'rouge1': [], 'rouge2': [], 'rougeL': [], 'bert_score': []},\n",
+    "    'conclusion': {'rouge1': [], 'rouge2': [], 'rougeL': [], 'bert_score': []}\n",
+    "}\n",
+    "\n",
+    "for column_name in df_target.columns:\n",
+    "    for i in range(TEXTS_COUNT):\n",
+    "        ref = df_target[column_name].iloc[i]\n",
+    "        gen = summary_gen[i]\n",
+    "\n",
+    "        # Scores ROUGE\n",
+    "        rouge_score = ROUGE_scorer.score(ref, gen)\n",
+    "        scores[column_name]['rouge1'].append(rouge_score['rouge1'].fmeasure)\n",
+    "        scores[column_name]['rouge2'].append(rouge_score['rouge2'].fmeasure)\n",
+    "        scores[column_name]['rougeL'].append(rouge_score['rougeL'].fmeasure)\n",
+    "\n",
+    "        # Scores BERT\n",
+    "        _, _, bert_score = BERT_scorer.score([ref], [gen])\n",
+    "        scores[column_name]['bert_score'].append(bert_score.mean().item())\n",
+    "\n",
+    "avg_scores_target = {\n",
+    "    col: {\n",
+    "        'rouge1': sum(scores[col]['rouge1']) / len(scores[col]['rouge1']),\n",
+    "        'rouge2': sum(scores[col]['rouge2']) / len(scores[col]['rouge2']),\n",
+    "        'rougeL': sum(scores[col]['rougeL']) / len(scores[col]['rougeL']),\n",
+    "        'bert_score': sum(scores[col]['bert_score']) / len(scores[col]['bert_score'])\n",
+    "    }\n",
+    "    for col in df_target.columns\n",
+    "}\n",
+    "\n",
+    "for col, metrics in avg_scores_target.items():\n",
+    "    print(f\"\\nScores moyens pour {col} :\")\n",
+    "    print(metrics)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "df_results = pd.DataFrame({\"Text\": texts, \"Reference\": summary_ref, \"Generated\": summary_gen})\n",
-    "df_results.to_csv(\"results_LexRank.csv\", index=False)"
+    "df_results.to_csv(\"./output/results_LexRank.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                     rouge1    rouge2    rougeL  bert_score\n",
+      "global             0.442750  0.157963  0.208097    0.831300\n",
+      "facts_of_the_case  0.214448  0.028111  0.120133    0.793284\n",
+      "question           0.072598  0.007530  0.053497    0.790153\n",
+      "conclusion         0.180092  0.028288  0.106796    0.797116\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_avg_scores = pd.DataFrame([avg_scores])\n",
+    "df_avg_scores.index = ['global']\n",
+    "\n",
+    "df_avg_scores_target = pd.DataFrame(avg_scores_target).T\n",
+    "\n",
+    "df_score = pd.concat([df_avg_scores, df_avg_scores_target], axis=0)\n",
+    "print(df_score.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_score.to_csv(\"./output/scores_LexRank.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
