--- a/test model files/test-Luhn.ipynb
+++ b/test model files/test-Luhn.ipynb
@@ -17,7 +17,8 @@
     "from sumy.utils import get_stop_words\n",
     "\n",
     "import os\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -37,8 +38,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_path_txt = '../SCOTU_data_txt_save/text'\n",
-    "test_path_sum = '../SCOTU_data_txt_save/summary'"
+    "test_path_txt = '../SCOTUS_data/text'\n",
+    "test_path_sum = '../SCOTUS_data/summary'\n",
+    "target_path_csv = '../SCOTUS_data/paragraph_target_df.csv'"
    ]
   },
   {
@@ -50,7 +52,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:22<00:00,  4.39it/s]\n"
+      "100%|██████████| 100/100 [00:41<00:00,  2.42it/s]\n"
      ]
     }
    ],
@@ -70,7 +72,9 @@
     "\n",
     "    for sentence in summarizer(parser.document, SENTENCES_COUNT):\n",
     "        sentence_txt = sentence_txt + str(sentence) + \"\\n\"\n",
-    "    summary_gen.append(sentence_txt)\n"
+    "    summary_gen.append(sentence_txt)\n",
+    "\n",
+    "df_target = pd.read_csv(target_path_csv)"
    ]
   },
   {
@@ -82,7 +86,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 11583.60it/s]\n"
+      "100%|██████████| 100/100 [00:00<00:00, 1451.19it/s]\n"
      ]
     }
    ],
@@ -127,7 +131,7 @@
       "  torch.utils._pytree._register_pytree_node(\n",
       "c:\\Users\\Nicolas\\anaconda3\\Lib\\site-packages\\transformers\\utils\\generic.py:260: FutureWarning: `torch.utils._pytree._register_pytree_node` is deprecated. Please use `torch.utils._pytree.register_pytree_node` instead.\n",
       "  torch.utils._pytree._register_pytree_node(\n",
-      "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-large and are newly initialized: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
+      "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-large and are newly initialized: ['roberta.pooler.dense.weight', 'roberta.pooler.dense.bias']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     },
@@ -166,15 +170,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "df_results = pd.DataFrame({\"Text\": texts, \"Reference\": summary_ref, \"Generated\": summary_gen})\n",
-    "df_results.to_csv(\"results_Luhn.csv\", index=False)"
+    "df_results.to_csv(\"./output/results_Luhn.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Scores moyens pour facts_of_the_case :\n",
+      "{'rouge1': 0.17491899136345182, 'rouge2': 0.025782485071900955, 'rougeL': 0.09965116867983087, 'bert_score': 0.7923703026771546}\n",
+      "\n",
+      "Scores moyens pour question :\n",
+      "{'rouge1': 0.05092333306949122, 'rouge2': 0.00736011025381529, 'rougeL': 0.038815327716732594, 'bert_score': 0.7888192445039749}\n",
+      "\n",
+      "Scores moyens pour conclusion :\n",
+      "{'rouge1': 0.1377739834622523, 'rouge2': 0.024751640902508004, 'rougeL': 0.0851222499107421, 'bert_score': 0.795342652797699}\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores = {\n",
+    "    'facts_of_the_case': {'rouge1': [], 'rouge2': [], 'rougeL': [], 'bert_score': []},\n",
+    "    'question': {'rouge1': [], 'rouge2': [], 'rougeL': [], 'bert_score': []},\n",
+    "    'conclusion': {'rouge1': [], 'rouge2': [], 'rougeL': [], 'bert_score': []}\n",
+    "}\n",
+    "\n",
+    "for column_name in df_target.columns:\n",
+    "    for i in range(TEXTS_COUNT):\n",
+    "        ref = df_target[column_name].iloc[i]\n",
+    "        gen = summary_gen[i]\n",
+    "\n",
+    "        # Scores ROUGE\n",
+    "        rouge_score = ROUGE_scorer.score(ref, gen)\n",
+    "        scores[column_name]['rouge1'].append(rouge_score['rouge1'].fmeasure)\n",
+    "        scores[column_name]['rouge2'].append(rouge_score['rouge2'].fmeasure)\n",
+    "        scores[column_name]['rougeL'].append(rouge_score['rougeL'].fmeasure)\n",
+    "\n",
+    "        # Scores BERT\n",
+    "        _, _, bert_score = BERT_scorer.score([ref], [gen])\n",
+    "        scores[column_name]['bert_score'].append(bert_score.mean().item())\n",
+    "\n",
+    "avg_scores_target = {\n",
+    "    col: {\n",
+    "        'rouge1': sum(scores[col]['rouge1']) / len(scores[col]['rouge1']),\n",
+    "        'rouge2': sum(scores[col]['rouge2']) / len(scores[col]['rouge2']),\n",
+    "        'rougeL': sum(scores[col]['rougeL']) / len(scores[col]['rougeL']),\n",
+    "        'bert_score': sum(scores[col]['bert_score']) / len(scores[col]['bert_score'])\n",
+    "    }\n",
+    "    for col in df_target.columns\n",
+    "}\n",
+    "\n",
+    "for col, metrics in avg_scores_target.items():\n",
+    "    print(f\"\\nScores moyens pour {col} :\")\n",
+    "    print(metrics)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                     rouge1    rouge2    rougeL  bert_score\n",
+      "global             0.409134  0.155227  0.199319    0.832455\n",
+      "facts_of_the_case  0.174919  0.025782  0.099651    0.792370\n",
+      "question           0.050923  0.007360  0.038815    0.788819\n",
+      "conclusion         0.137774  0.024752  0.085122    0.795343\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_avg_scores = pd.DataFrame([avg_scores])\n",
+    "df_avg_scores.index = ['global']\n",
+    "\n",
+    "df_avg_scores_target = pd.DataFrame(avg_scores_target).T\n",
+    "\n",
+    "df_score = pd.concat([df_avg_scores, df_avg_scores_target], axis=0)\n",
+    "print(df_score.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_score.to_csv(\"./output/scores_Luhn.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
