update LexRank notebook for development paths and adjust scoring calculations

--- a/test model files/test-LexRank.ipynb
+++ b/test model files/test-LexRank.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,58 +35,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_path_txt = '../SCOTUS_data/text'\n",
-    "test_path_sum = '../SCOTUS_data/summary'\n",
-    "target_path_csv = '../SCOTUS_data/paragraph_target_df.csv'"
+    "test_path_txt = '../SCOTUS_data/text_dev'\n",
+    "test_path_sum = '../SCOTUS_data/summary_dev'\n",
+    "target_path_csv = '../SCOTUS_data/paragraph_target_df_dev.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [08:11<00:00,  4.91s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                   facts_of_the_case  \\\n",
-      "0  William Packer was convicted in a California s...   \n",
-      "1  In 1984 Dow Chemical Co. negotiated a settleme...   \n",
-      "2  In 1995, the U.S. Supreme Court, in Adarand Co...   \n",
-      "3  After stopping him for speeding, an Iowa polic...   \n",
-      "4  To prevent \"local media monopolies,\" Section 5...   \n",
-      "\n",
-      "                                            question  \\\n",
-      "0  Was a state court’s determination that encoura...   \n",
-      "1  Does the 1984 Agent Orange settlement preclude...   \n",
-      "2  Did the Court of Appeals misapply the strict s...   \n",
-      "3  Can a search of a stopped vehicle that occurs ...   \n",
-      "4  Does 47 U.S.C. 533(b), which bars local teleph...   \n",
-      "\n",
-      "                                          conclusion  \n",
-      "0  Encouraging the jury to continue deliberations...  \n",
-      "1  An equally divided Court affirmed in part and ...  \n",
-      "2  In a per curiam opinion, the Court dismissed t...  \n",
-      "3  No. In a unanimous opinion, the Court held tha...  \n",
-      "4  Unanswered. After the Court heard oral argumen...  \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "100%|██████████| 100/100 [07:06<00:00,  4.26s/it]\n"
      ]
     }
    ],
@@ -113,21 +80,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/100 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 5393.70it/s]\n"
+      "100%|██████████| 100/100 [00:00<00:00, 899.32it/s]\n"
      ]
     }
    ],
@@ -142,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -161,13 +121,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "c:\\Users\\Nicolas\\anaconda3\\Lib\\site-packages\\transformers\\utils\\generic.py:260: FutureWarning: `torch.utils._pytree._register_pytree_node` is deprecated. Please use `torch.utils._pytree.register_pytree_node` instead.\n",
+      "  torch.utils._pytree._register_pytree_node(\n",
+      "c:\\Users\\Nicolas\\anaconda3\\Lib\\site-packages\\transformers\\utils\\generic.py:260: FutureWarning: `torch.utils._pytree._register_pytree_node` is deprecated. Please use `torch.utils._pytree.register_pytree_node` instead.\n",
+      "  torch.utils._pytree._register_pytree_node(\n",
       "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-large and are newly initialized: ['roberta.pooler.dense.weight', 'roberta.pooler.dense.bias']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
@@ -176,7 +140,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scores ROUGE : {'rouge1': 0.4427502395093806, 'rouge2': 0.15796302795858608, 'rougeL': 0.20809716197503245, 'bert_score': 0.8313004660606385}\n"
+      "Scores ROUGE : {'rouge1': 0.4729473959730662, 'rouge2': 0.18433388689473967, 'rougeL': 0.23116409803511442, 'bert_score': 0.8378395849466324}\n"
      ]
     }
    ],
@@ -196,9 +160,9 @@
     "\n",
     "# Moyennes des scores\n",
     "avg_scores = {\n",
-    "    'rouge1': sum(s['rouge1'].fmeasure for s in ROUGE_scores) / len(ROUGE_scores),\n",
-    "    'rouge2': sum(s['rouge2'].fmeasure for s in ROUGE_scores) / len(ROUGE_scores),\n",
-    "    'rougeL': sum(s['rougeL'].fmeasure for s in ROUGE_scores) / len(ROUGE_scores),\n",
+    "    'rouge1': sum(s['rouge1'].recall for s in ROUGE_scores) / len(ROUGE_scores),\n",
+    "    'rouge2': sum(s['rouge2'].recall for s in ROUGE_scores) / len(ROUGE_scores),\n",
+    "    'rougeL': sum(s['rougeL'].recall for s in ROUGE_scores) / len(ROUGE_scores),\n",
     "    'bert_score': sum(s[2].mean().item() for s in BERT_scores) / len(BERT_scores),\n",
     "}\n",
     "\n",
@@ -207,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -216,13 +180,13 @@
      "text": [
       "\n",
       "Scores moyens pour facts_of_the_case :\n",
-      "{'rouge1': 0.21444836455050267, 'rouge2': 0.028111137244745295, 'rougeL': 0.12013335297395639, 'bert_score': 0.7932844638824463}\n",
+      "{'rouge1': 0.3626923497309816, 'rouge2': 0.05626251709635248, 'rougeL': 0.2120427550680419, 'bert_score': 0.7977485471963882}\n",
       "\n",
       "Scores moyens pour question :\n",
-      "{'rouge1': 0.07259777337038266, 'rouge2': 0.007529909716499205, 'rougeL': 0.05349701536978904, 'bert_score': 0.7901528000831604}\n",
+      "{'rouge1': 0.41155738381246515, 'rouge2': 0.06180876822878217, 'rougeL': 0.3340819590407158, 'bert_score': 0.7937090587615967}\n",
       "\n",
       "Scores moyens pour conclusion :\n",
-      "{'rouge1': 0.18009157868819536, 'rouge2': 0.02828797872297114, 'rougeL': 0.10679586301441497, 'bert_score': 0.7971158695220947}\n"
+      "{'rouge1': 0.3818007171344893, 'rouge2': 0.06259786489955484, 'rougeL': 0.21720289443112972, 'bert_score': 0.7997391957044602}\n"
      ]
     }
    ],
@@ -240,9 +204,9 @@
     "\n",
     "        # Scores ROUGE\n",
     "        rouge_score = ROUGE_scorer.score(ref, gen)\n",
-    "        scores[column_name]['rouge1'].append(rouge_score['rouge1'].fmeasure)\n",
-    "        scores[column_name]['rouge2'].append(rouge_score['rouge2'].fmeasure)\n",
-    "        scores[column_name]['rougeL'].append(rouge_score['rougeL'].fmeasure)\n",
+    "        scores[column_name]['rouge1'].append(rouge_score['rouge1'].recall)\n",
+    "        scores[column_name]['rouge2'].append(rouge_score['rouge2'].recall)\n",
+    "        scores[column_name]['rougeL'].append(rouge_score['rougeL'].recall)\n",
     "\n",
     "        # Scores BERT\n",
     "        _, _, bert_score = BERT_scorer.score([ref], [gen])\n",
@@ -265,19 +229,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "df_results = pd.DataFrame({\"Text\": texts, \"Reference\": summary_ref, \"Generated\": summary_gen})\n",
-    "df_results.to_csv(\"./output/results_LexRank.csv\", index=False)"
+    "df_results.to_csv(\"./output/results_LexRank_dev.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -285,10 +249,10 @@
      "output_type": "stream",
      "text": [
       "                     rouge1    rouge2    rougeL  bert_score\n",
-      "global             0.442750  0.157963  0.208097    0.831300\n",
-      "facts_of_the_case  0.214448  0.028111  0.120133    0.793284\n",
-      "question           0.072598  0.007530  0.053497    0.790153\n",
-      "conclusion         0.180092  0.028288  0.106796    0.797116\n"
+      "global             0.472947  0.184334  0.231164    0.837840\n",
+      "facts_of_the_case  0.362692  0.056263  0.212043    0.797749\n",
+      "question           0.411557  0.061809  0.334082    0.793709\n",
+      "conclusion         0.381801  0.062598  0.217203    0.799739\n"
      ]
     }
    ],
@@ -304,19 +268,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_score.to_csv(\"./output/scores_LexRank.csv\")"
+    "df_score.to_csv(\"./output/scores_LexRank_dev.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
