--- a/hybrid/LexRank_legal-pegasus.ipynb
+++ b/hybrid/LexRank_legal-pegasus.ipynb
@@ -15,14 +15,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LexRank_data_path = '../resultats/results_LexRank.csv'\n",
-    "\n",
-    "df = pd.read_csv(LexRank_data_path)"
+    "TEXTS_COUNT = 100"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LexRank_data_path = '../resultats/results_LexRank.csv'\n",
+    "target_path_csv = '../SCOTUS_data/paragraph_target_df_dev.csv'\n",
+    "\n",
+    "df = pd.read_csv(LexRank_data_path)\n",
+    "df_target = pd.read_csv(target_path_csv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +120,7 @@
        "4  The injury we contemplate when considering neg...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,9 +131,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "gen_txt = df['Generated']\n",
     "ref_txt = df['Reference']"
@@ -130,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -148,110 +171,150 @@
    ],
    "source": [
     "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM\n",
-    "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\"nsi319/legal-pegasus\")\n",
-    "model = AutoModelForSeq2SeqLM.from_pretrained(\"nsi319/legal-pegasus\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import torch\n",
     "\n",
-    "def generate_summary(model, tokenizer, text, max_input_length=1024, max_output_length=256):\n",
-    "    \"\"\"Génère un résumé pour un texte donné.\"\"\"\n",
-    "    inputs = tokenizer(\n",
-    "        text, max_length=max_input_length, truncation=True, return_tensors=\"pt\", padding=\"longest\"\n",
-    "    ).input_ids\n",
-    "    inputs = inputs.to(model.device)  # S'assurer que les données sont sur le bon appareil\n",
+    "# Détection de l'appareil\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
-    "    # Génération\n",
-    "    output_ids = model.generate(\n",
-    "        inputs, max_length=max_output_length, num_beams=5, length_penalty=2.0, early_stopping=True\n",
-    "    )\n",
-    "    return tokenizer.decode(output_ids[0], skip_special_tokens=True)"
+    "# Charger le tokenizer et le modèle\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"nsi319/legal-pegasus\")  \n",
+    "model = AutoModelForSeq2SeqLM.from_pretrained(\"nsi319/legal-pegasus\").to(device)\n",
+    "\n",
+    "# Fonction pour résumer les textes\n",
+    "def summarize_texts(texts):\n",
+    "    summaries = []\n",
+    "    for text in texts:\n",
+    "        # Préparer l'entrée pour le modèle\n",
+    "        inputs = tokenizer(text, max_length=1024, truncation=True, return_tensors=\"pt\").to(device)\n",
+    "        \n",
+    "        # Générer le résumé\n",
+    "        summary_ids = model.generate(\n",
+    "            inputs[\"input_ids\"],\n",
+    "            max_length=1024,\n",
+    "            min_length=40,\n",
+    "            length_penalty=2.0,\n",
+    "            num_beams=4,\n",
+    "            early_stopping=True\n",
+    "        )\n",
+    "        \n",
+    "        # Décoder le résumé généré\n",
+    "        summary = tokenizer.decode(summary_ids[0], skip_special_tokens=True)\n",
+    "        summaries.append(summary)\n",
+    "\n",
+    "    return summaries\n",
+    "\n",
+    "# Résumer les textes dans gen_txt\n",
+    "summarized_texts = summarize_texts(gen_txt)\n",
+    "\n",
+    "# Ajouter les résumés au DataFrame\n",
+    "df['Summary'] = summarized_texts\n",
+    "\n",
+    "df.to_csv('./output/results_Hybrid_Lex_Legal.csv', index=False)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-large and are newly initialized: ['roberta.pooler.dense.weight', 'roberta.pooler.dense.bias']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Scores ROUGE et BERT : {'rouge1': 0.39637698047377723, 'rouge2': 0.13573539695952136, 'rougeL': 0.2187488646476557, 'bert_score': 0.02475793566321954}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from rouge_score import rouge_scorer\n",
-    "from bert_score import BERTScorer\n",
-    "\n",
-    "def evaluate_model(model, tokenizer, texts, references, max_input_length=1024, max_output_length=256):\n",
-    "    \"\"\"Évalue les performances du modèle sur les données de test.\"\"\"\n",
-    "    rouge_scorer_instance = rouge_scorer.RougeScorer(['rouge1', 'rouge2', 'rougeL'], use_stemmer=True)\n",
-    "    bert_scorer_instance = BERTScorer(lang=\"en\", rescale_with_baseline=True)\n",
-    "\n",
-    "    rouge_scores = {'rouge1': [], 'rouge2': [], 'rougeL': []}\n",
-    "    bert_scores_f1 = []\n",
-    "    summaries = []\n",
-    "\n",
-    "    for text, reference in zip(texts, references):\n",
-    "        # Générer le résumé\n",
-    "        generated_summary = generate_summary(model, tokenizer, text, max_input_length, max_output_length)\n",
-    "\n",
-    "        summaries.append(generated_summary)\n",
-    "\n",
-    "        # Calcul des scores ROUGE\n",
-    "        rouge_results = rouge_scorer_instance.score(reference, generated_summary)\n",
-    "        rouge_scores['rouge1'].append(rouge_results['rouge1'].fmeasure)\n",
-    "        rouge_scores['rouge2'].append(rouge_results['rouge2'].fmeasure)\n",
-    "        rouge_scores['rougeL'].append(rouge_results['rougeL'].fmeasure)\n",
-    "\n",
-    "        # Calcul des scores BERT\n",
-    "        _, _, f1 = bert_scorer_instance.score([generated_summary], [reference])\n",
-    "        bert_scores_f1.append(f1.mean().item())  # Extraire la moyenne des scores F1\n",
-    "\n",
-    "    # Moyenne des scores\n",
-    "    avg_scores = {\n",
-    "        'rouge1': sum(rouge_scores['rouge1']) / len(rouge_scores['rouge1']),\n",
-    "        'rouge2': sum(rouge_scores['rouge2']) / len(rouge_scores['rouge2']),\n",
-    "        'rougeL': sum(rouge_scores['rougeL']) / len(rouge_scores['rougeL']),\n",
-    "        'bert_score': sum(bert_scores_f1) / len(bert_scores_f1),\n",
-    "    }\n",
-    "\n",
-    "    return avg_scores, summaries\n",
-    "\n",
-    "# Évaluer le modèle\n",
-    "results, summaries = evaluate_model(model, tokenizer, gen_txt, ref_txt)\n",
-    "print(\"Scores ROUGE et BERT :\", results)\n"
+    "summary_gen = df['Summary']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "from rouge_score import rouge_scorer\n",
+    "from bert_score import BERTScorer\n",
     "\n",
-    "summary_df = pd.DataFrame({'Generated': gen_txt, 'Reference': ref_txt, 'Summary': summaries})\n",
-    "summary_df.head()\n",
+    "ROUGE_scorer = rouge_scorer.RougeScorer(['rouge1', 'rouge2', 'rougeL'], use_stemmer=True)\n",
+    "BERT_scorer = BERTScorer(lang=\"en\")\n",
+    "ROUGE_scores = []\n",
+    "BERT_scores = []\n",
+    "for i in range(len(ref_txt)):\n",
+    "    score = ROUGE_scorer.score(ref_txt[i], summary_gen[i])\n",
+    "    ROUGE_scores.append(score)\n",
+    "    BERT_scores.append(BERT_scorer.score([ref_txt[i]], [summary_gen[i]]))\n",
+    "    # print(f\"Scores pour le résumé {i+1} :\", score)\n",
     "\n",
-    "summary_df.to_csv('../resultats/results_LexRank_summaries.csv', index=False)"
+    "# Moyennes des scores\n",
+    "avg_scores = {\n",
+    "    'rouge1': sum(s['rouge1'].fmeasure for s in ROUGE_scores) / len(ROUGE_scores),\n",
+    "    'rouge2': sum(s['rouge2'].fmeasure for s in ROUGE_scores) / len(ROUGE_scores),\n",
+    "    'rougeL': sum(s['rougeL'].fmeasure for s in ROUGE_scores) / len(ROUGE_scores),\n",
+    "    'bert_score': sum(s[2].mean().item() for s in BERT_scores) / len(BERT_scores),\n",
+    "}\n",
+    "\n",
+    "print(\"Scores ROUGE :\", avg_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores = {\n",
+    "    'facts_of_the_case': {'rouge1': [], 'rouge2': [], 'rougeL': [], 'bert_score': []},\n",
+    "    'question': {'rouge1': [], 'rouge2': [], 'rougeL': [], 'bert_score': []},\n",
+    "    'conclusion': {'rouge1': [], 'rouge2': [], 'rougeL': [], 'bert_score': []}\n",
+    "}\n",
+    "\n",
+    "for column_name in df_target.columns:\n",
+    "    for i in range(TEXTS_COUNT):\n",
+    "        ref = df_target[column_name].iloc[i]\n",
+    "        gen = summary_gen[i]\n",
+    "\n",
+    "        # Scores ROUGE\n",
+    "        rouge_score = ROUGE_scorer.score(ref, gen)\n",
+    "        scores[column_name]['rouge1'].append(rouge_score['rouge1'].recall)\n",
+    "        scores[column_name]['rouge2'].append(rouge_score['rouge2'].recall)\n",
+    "        scores[column_name]['rougeL'].append(rouge_score['rougeL'].recall)\n",
+    "\n",
+    "        # Scores BERT\n",
+    "        _, _, bert_score = BERT_scorer.score([ref], [gen])\n",
+    "        scores[column_name]['bert_score'].append(bert_score.mean().item())\n",
+    "\n",
+    "avg_scores_target = {\n",
+    "    col: {\n",
+    "        'rouge1': sum(scores[col]['rouge1']) / len(scores[col]['rouge1']),\n",
+    "        'rouge2': sum(scores[col]['rouge2']) / len(scores[col]['rouge2']),\n",
+    "        'rougeL': sum(scores[col]['rougeL']) / len(scores[col]['rougeL']),\n",
+    "        'bert_score': sum(scores[col]['bert_score']) / len(scores[col]['bert_score'])\n",
+    "    }\n",
+    "    for col in df_target.columns\n",
+    "}\n",
+    "\n",
+    "for col, metrics in avg_scores_target.items():\n",
+    "    print(f\"\\nScores moyens pour {col} :\")\n",
+    "    print(metrics)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_avg_scores = pd.DataFrame([avg_scores])\n",
+    "df_avg_scores.index = ['global']\n",
+    "\n",
+    "df_avg_scores_target = pd.DataFrame(avg_scores_target).T\n",
+    "\n",
+    "df_score = pd.concat([df_avg_scores, df_avg_scores_target], axis=0)\n",
+    "print(df_score.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_score.to_csv(\"./output/scores_Hybrid_Lex_Legal_dev.csv\")"
    ]
   }
  ],
