put python files in utilities

--- a/analysis/segmenter_choice.ipynb
+++ b/analysis/segmenter_choice.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "import sys\n",
     "sys.path.insert(0, '../')\n",
-    "import functions as fct\n",
+    "import utilities.functions as fct\n",
     "import time\n",
     "import os\n",
     "import pandas as pd\n",
