--- a/analysis/target_analysis.ipynb
+++ b/analysis/target_analysis.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "import functions as fct\n",
+    "import utilities.functions as fct\n",
     "from IPython.display import display, HTML\n",
     "import string\n",
     "import re\n",
