--- a/analysis/data_processing.ipynb
+++ b/analysis/data_processing.ipynb
@@ -12,7 +12,7 @@
     "from IPython.display import display, HTML\n",
     "import sys\n",
     "sys.path.insert(0, '../')\n",
-    "import functions as fct"
+    "import utilities.functions as fct"
    ]
   },
   {
@@ -1566,7 +1566,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1580,7 +1580,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
