--- a/evaluate models/test-LexRank.ipynb
+++ b/evaluate models/test-LexRank.ipynb
@@ -18,6 +18,7 @@
     "from sumy.utils import get_stop_words\n",
     "\n",
     "import os\n",
+    "import time\n",
     "from tqdm import tqdm\n",
     "import pandas as pd"
    ]
@@ -53,13 +54,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [07:06<00:00,  4.26s/it]\n"
+      "100%|██████████| 100/100 [04:45<00:00,  2.86s/it]\n"
      ]
     }
    ],
    "source": [
     "summary_gen = []\n",
     "texts = []\n",
+    "start_time = time.time()\n",
     "\n",
     "for file_name in tqdm(os.listdir(test_path_txt)[:TEXTS_COUNT]):\n",
     "    text = open(os.path.join(test_path_txt, file_name), 'r').read()\n",
@@ -75,6 +77,9 @@
     "        sentence_txt = sentence_txt + str(sentence) + \"\\n\"\n",
     "    summary_gen.append(sentence_txt)\n",
     "\n",
+    "end_time = time.time()\n",
+    "execution_time = end_time - start_time\n",
+    "\n",
     "df_target = pd.read_csv(target_path_csv)"
    ]
   },
@@ -87,7 +92,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 899.32it/s]\n"
+      "100%|██████████| 100/100 [00:00<00:00, 1146.68it/s]\n"
      ]
     }
    ],
@@ -132,7 +137,7 @@
       "  torch.utils._pytree._register_pytree_node(\n",
       "c:\\Users\\Nicolas\\anaconda3\\Lib\\site-packages\\transformers\\utils\\generic.py:260: FutureWarning: `torch.utils._pytree._register_pytree_node` is deprecated. Please use `torch.utils._pytree.register_pytree_node` instead.\n",
       "  torch.utils._pytree._register_pytree_node(\n",
-      "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-large and are newly initialized: ['roberta.pooler.dense.weight', 'roberta.pooler.dense.bias']\n",
+      "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-large and are newly initialized: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     },
@@ -248,11 +253,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                     rouge1    rouge2    rougeL  bert_score\n",
-      "global             0.472947  0.184334  0.231164    0.837840\n",
-      "facts_of_the_case  0.362692  0.056263  0.212043    0.797749\n",
-      "question           0.411557  0.061809  0.334082    0.793709\n",
-      "conclusion         0.381801  0.062598  0.217203    0.799739\n"
+      "                     rouge1    rouge2    rougeL  bert_score  Execution time\n",
+      "global             0.472947  0.184334  0.231164    0.837840      285.903112\n",
+      "facts_of_the_case  0.362692  0.056263  0.212043    0.797749      285.903112\n",
+      "question           0.411557  0.061809  0.334082    0.793709      285.903112\n",
+      "conclusion         0.381801  0.062598  0.217203    0.799739      285.903112\n"
      ]
     }
    ],
@@ -263,6 +268,8 @@
     "df_avg_scores_target = pd.DataFrame(avg_scores_target).T\n",
     "\n",
     "df_score = pd.concat([df_avg_scores, df_avg_scores_target], axis=0)\n",
+    "df_score['Execution time'] = execution_time\n",
+    "\n",
     "print(df_score.head())"
    ]
   },
