--- a/evaluate models/test-Luhn.ipynb
+++ b/evaluate models/test-Luhn.ipynb
@@ -17,6 +17,7 @@
     "from sumy.utils import get_stop_words\n",
     "\n",
     "import os\n",
+    "import time\n",
     "from tqdm import tqdm\n",
     "import pandas as pd"
    ]
@@ -52,15 +53,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:28<00:00,  3.50it/s]\n"
+      "100%|██████████| 100/100 [00:23<00:00,  4.19it/s]\n"
      ]
     }
    ],
    "source": [
     "summary_gen = []\n",
     "texts = []\n",
+    "start_time = time.time()\n",
     "\n",
     "for file_name in tqdm(os.listdir(test_path_txt)[:TEXTS_COUNT]):\n",
+    "\n",
     "    text = open(os.path.join(test_path_txt, file_name), 'r').read()\n",
     "    texts.append(text)\n",
     "    parser = PlaintextParser.from_file(os.path.join(test_path_txt, file_name), Tokenizer(LANGUAGE))\n",
@@ -74,6 +77,9 @@
     "        sentence_txt = sentence_txt + str(sentence) + \"\\n\"\n",
     "    summary_gen.append(sentence_txt)\n",
     "\n",
+    "end_time = time.time()\n",
+    "execution_time = end_time - start_time\n",
+    "\n",
     "df_target = pd.read_csv(target_path_csv)"
    ]
   },
@@ -86,7 +92,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 1169.35it/s]\n"
+      "100%|██████████| 100/100 [00:00<00:00, 1312.26it/s]\n"
      ]
     }
    ],
@@ -131,7 +137,7 @@
       "  torch.utils._pytree._register_pytree_node(\n",
       "c:\\Users\\Nicolas\\anaconda3\\Lib\\site-packages\\transformers\\utils\\generic.py:260: FutureWarning: `torch.utils._pytree._register_pytree_node` is deprecated. Please use `torch.utils._pytree.register_pytree_node` instead.\n",
       "  torch.utils._pytree._register_pytree_node(\n",
-      "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-large and are newly initialized: ['roberta.pooler.dense.weight', 'roberta.pooler.dense.bias']\n",
+      "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-large and are newly initialized: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     },
@@ -139,7 +145,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scores ROUGE : {'rouge1': 0.39702714015091645, 'rouge2': 0.14459409160699357, 'rougeL': 0.19431518930399994, 'bert_score': 0.8288299936056137}\n"
+      "Scores ROUGE : {'rouge1': 0.5887643367209824, 'rouge2': 0.21440843715458224, 'rougeL': 0.2926844097240645, 'bert_score': 0.8288299936056137}\n"
      ]
     }
    ],
@@ -159,9 +165,9 @@
     "\n",
     "# Moyennes des scores\n",
     "avg_scores = {\n",
-    "    'rouge1': sum(s['rouge1'].fmeasure for s in ROUGE_scores) / len(ROUGE_scores),\n",
-    "    'rouge2': sum(s['rouge2'].fmeasure for s in ROUGE_scores) / len(ROUGE_scores),\n",
-    "    'rougeL': sum(s['rougeL'].fmeasure for s in ROUGE_scores) / len(ROUGE_scores),\n",
+    "    'rouge1': sum(s['rouge1'].recall for s in ROUGE_scores) / len(ROUGE_scores),\n",
+    "    'rouge2': sum(s['rouge2'].recall for s in ROUGE_scores) / len(ROUGE_scores),\n",
+    "    'rougeL': sum(s['rougeL'].recall for s in ROUGE_scores) / len(ROUGE_scores),\n",
     "    'bert_score': sum(s[2].mean().item() for s in BERT_scores) / len(BERT_scores),\n",
     "}\n",
     "\n",
@@ -191,13 +197,13 @@
      "text": [
       "\n",
       "Scores moyens pour facts_of_the_case :\n",
-      "{'rouge1': 0.17956847099890613, 'rouge2': 0.02665423027698347, 'rougeL': 0.10232946347352075, 'bert_score': 0.7919618076086045}\n",
+      "{'rouge1': 0.4308482631079169, 'rouge2': 0.06356231994214706, 'rougeL': 0.25758287132084495, 'bert_score': 0.7919618076086045}\n",
       "\n",
       "Scores moyens pour question :\n",
-      "{'rouge1': 0.04277783476418723, 'rouge2': 0.006286843429999269, 'rougeL': 0.03246765873340019, 'bert_score': 0.7889240062236786}\n",
+      "{'rouge1': 0.4817428586928122, 'rouge2': 0.07414550407430225, 'rougeL': 0.37939915772766597, 'bert_score': 0.7889240062236786}\n",
       "\n",
       "Scores moyens pour conclusion :\n",
-      "{'rouge1': 0.18839921114369687, 'rouge2': 0.029302424133872587, 'rougeL': 0.10442914409908592, 'bert_score': 0.7945915901660919}\n"
+      "{'rouge1': 0.4562494917011051, 'rouge2': 0.07540015962078572, 'rougeL': 0.2637646021244749, 'bert_score': 0.7945915901660919}\n"
      ]
     }
    ],
@@ -215,9 +221,9 @@
     "\n",
     "        # Scores ROUGE\n",
     "        rouge_score = ROUGE_scorer.score(ref, gen)\n",
-    "        scores[column_name]['rouge1'].append(rouge_score['rouge1'].fmeasure)\n",
-    "        scores[column_name]['rouge2'].append(rouge_score['rouge2'].fmeasure)\n",
-    "        scores[column_name]['rougeL'].append(rouge_score['rougeL'].fmeasure)\n",
+    "        scores[column_name]['rouge1'].append(rouge_score['rouge1'].recall)\n",
+    "        scores[column_name]['rouge2'].append(rouge_score['rouge2'].recall)\n",
+    "        scores[column_name]['rougeL'].append(rouge_score['rougeL'].recall)\n",
     "\n",
     "        # Scores BERT\n",
     "        _, _, bert_score = BERT_scorer.score([ref], [gen])\n",
@@ -247,11 +253,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                     rouge1    rouge2    rougeL  bert_score\n",
-      "global             0.397027  0.144594  0.194315    0.828830\n",
-      "facts_of_the_case  0.179568  0.026654  0.102329    0.791962\n",
-      "question           0.042778  0.006287  0.032468    0.788924\n",
-      "conclusion         0.188399  0.029302  0.104429    0.794592\n"
+      "                     rouge1    rouge2    rougeL  bert_score  Execution time\n",
+      "global             0.588764  0.214408  0.292684    0.828830       23.890472\n",
+      "facts_of_the_case  0.430848  0.063562  0.257583    0.791962       23.890472\n",
+      "question           0.481743  0.074146  0.379399    0.788924       23.890472\n",
+      "conclusion         0.456249  0.075400  0.263765    0.794592       23.890472\n"
      ]
     }
    ],
@@ -262,6 +268,7 @@
     "df_avg_scores_target = pd.DataFrame(avg_scores_target).T\n",
     "\n",
     "df_score = pd.concat([df_avg_scores, df_avg_scores_target], axis=0)\n",
+    "df_score['Execution time'] = execution_time\n",
     "print(df_score.head())"
    ]
   },
@@ -273,13 +280,6 @@
    "source": [
     "df_score.to_csv(\"./output/scores_Luhn_dev.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
